--- a/FinalProject/Objects/exp1.build_log.htm
+++ b/FinalProject/Objects/exp1.build_log.htm
@@ -28,17 +28,21 @@ Project File Date:  05/25/2025
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'C:\Keil_v5.28\ARM\ARMCC\Bin'
 Build target 'Target 1'
 compiling FinalProject.c...
-FinalProject.c(86): warning:  #223-D: function "SysTickPeriodSet" declared implicitly
+FinalProject.c(44): warning:  #1295-D: Deprecated declaration ReadKey - give arg types
+  uint8_t     ReadKey();
+FinalProject.c(105): warning:  #223-D: function "SysTickPeriodSet" declared implicitly
   	SysTickPeriodSet(ui32SysClock/10); // 中断周期为100ms	
-FinalProject.c(143): warning:  #550-D: variable "result"  was set but never used
+FinalProject.c(136): warning:  #188-D: enumerated type mixed with another type
+              currentMode = (currentMode + 1) % 3;
+FinalProject.c(250): warning:  #550-D: variable "result"  was set but never used
   	uint8_t result;
-FinalProject.c(228): warning:  #550-D: variable "rop"  was set but never used
+FinalProject.c(295): warning:  #550-D: variable "rop"  was set but never used
   	uint8_t value,rop;
-FinalProject.c: 3 warnings, 0 errors
+FinalProject.c: 5 warnings, 0 errors
 linking...
-Program Size: Code=3248 RO-data=1692 RW-data=68 ZI-data=612  
+Program Size: Code=3464 RO-data=1692 RW-data=96 ZI-data=608  
 FromELF: creating hex file...
-".\Objects\exp1.axf" - 0 Error(s), 3 Warning(s).
+".\Objects\exp1.axf" - 0 Error(s), 5 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -64,10 +68,10 @@ Package Vendor: Keil
    * Component: ARM::CMSIS:CORE:5.2.0
 
    * Component: Keil::Device:Startup:1.0.0
-      Include file:  Device\Include\TM4C129\TM4C129.h
       Source file:   Device\Source\ARM\startup_TM4C129.s
+      Include file:  Device\Include\TM4C129\TM4C129.h
       Source file:   Device\Source\system_TM4C129.c
-Build Time Elapsed:  00:00:00
+Build Time Elapsed:  00:00:01
 </pre>
 </body>
 </html>
