--- a/FinalProject/Objects/exp1.build_log.htm
+++ b/FinalProject/Objects/exp1.build_log.htm
@@ -28,38 +28,17 @@ Project File Date:  05/28/2025
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'C:\Keil_v5.28\ARM\ARMCC\Bin'
 Build target 'Target 1'
 compiling FinalProject.c...
-FinalProject.c(134): warning:  #223-D: function "SysTickPeriodSet" declared implicitly
-  	SysTickPeriodSet(ui32SysClock); // 中断周期为1s	
-FinalProject.c(142): warning:  #223-D: function "SysTickIntEnable" declared implicitly
-      SysTickIntEnable();
-FinalProject.c(143): warning:  #223-D: function "SysTickEnable" declared implicitly
-      SysTickEnable();
-FinalProject.c(144): warning:  #223-D: function "IntEnable" declared implicitly
-  	IntEnable(INT_UART0);
-FinalProject.c(146): warning:  #223-D: function "IntMasterEnable" declared implicitly
-  	IntMasterEnable();
-FinalProject.c(149): warning:  #223-D: function "IntPriorityMaskGet" declared implicitly
-  	ui32IntPriorityMask	= IntPriorityMaskGet();
-FinalProject.c(150): warning:  #223-D: function "IntPriorityGroupingSet" declared implicitly
-  	IntPriorityGroupingSet(3);														//Set all priority to pre-emtption priority
-FinalProject.c(152): warning:  #223-D: function "IntPrioritySet" declared implicitly
-  	IntPrioritySet(INT_UART0,3);													//Set INT_UART0 to highest priority
-FinalProject.c(155): warning:  #223-D: function "IntPriorityGroupingGet" declared implicitly
-  	ui32IntPriorityGroup = IntPriorityGroupingGet();
-FinalProject.c(157): warning:  #223-D: function "IntPriorityGet" declared implicitly
-  	ui32IntPriorityUart0 = IntPriorityGet(INT_UART0);
-FinalProject.c(162): warning:  #223-D: function "UARTStringPut" declared implicitly
-  		UARTStringPut((uint8_t *)"\r\nmain-loop\r\n");
-FinalProject.c(170): warning:  #188-D: enumerated type mixed with another type
-  					currentMode = (currentMode + 1) % 3;
-FinalProject.c(335): warning:  #550-D: variable "result"  was set but never used
+FinalProject.c(233): warning:  #188-D: enumerated type mixed with another type
+  					currentMode = (currentMode + 1) % MODE_MAX;
+FinalProject.c(405): warning:  #550-D: variable "result"  was set but never used
   	uint8_t result;
-FinalProject.c(355): error:  #159: declaration is incompatible with previous "UARTStringPut"  (declared at line 162)
-  void UARTStringPut(uint8_t *cMessage)
-FinalProject.c(406): warning:  #550-D: variable "rop"  was set but never used
+FinalProject.c(476): warning:  #550-D: variable "rop"  was set but never used
   	uint8_t value,rop;
-FinalProject.c: 14 warnings, 1 error
-".\Objects\exp1.axf" - 1 Error(s), 14 Warning(s).
+FinalProject.c: 3 warnings, 0 errors
+linking...
+Program Size: Code=5032 RO-data=1960 RW-data=128 ZI-data=1136  
+FromELF: creating hex file...
+".\Objects\exp1.axf" - 0 Error(s), 3 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -88,7 +67,6 @@ Package Vendor: Keil
       Source file:   Device\Source\ARM\startup_TM4C129.s
       Source file:   Device\Source\system_TM4C129.c
       Include file:  Device\Include\TM4C129\TM4C129.h
-Target not created.
 Build Time Elapsed:  00:00:00
 </pre>
 </body>
